# treino-ia

./: README.md  docker-compose.yml  test-animation.sh
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/assets/: dumbbell-animation.json
frontend/src/assets/exercises/: abdominal.json  bench-press.json  puxada-frontal.json  squat.json  triceps-corda.json
frontend/src/components/: ExerciseAnimation.tsx  ExerciseGifImage.tsx
